--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Florian\\AppData\\Local\\Temp/ipykernel_14768/1091249216.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/tmp/ipykernel_11067/1091249216.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  db = db.drop([\"GRID_TYPE\", \"GAME_EVENT_ID\", \"TEAM_ID\", \"SHOT_ATTEMPTED_FLAG\"],1)\n"
      ]
     },
@@ -449,7 +449,7 @@
        "4  BOS  PHI  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Florian\\AppData\\Local\\Temp/ipykernel_14768/4120920332.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_11067/4120920332.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  b = a[db['SHOT_TYPE'] == shottype]\n"
      ]
     },
@@ -509,7 +509,7 @@
        "Name: SHOT_MADE_FLAG, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,34 @@
     "    db2.insert(7,\"GAME_MINUTES_PLAYED\", b)\n",
     "    dball = db1.append(db2)\n",
     "    return dball.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()\n",
-    "\n"
+    "\n",
+    "def hitratebytime_player(playername, time = 100):\n",
+    "    a=(db[\"PERIOD\"]*12)-db[\"MINUTES_REMAINING\"]\n",
+    "    db.insert(7,\"GAME_MINUTES_PLAYED\", a)\n",
+    "    db1 = db[db['PERIOD'] <= 4]\n",
+    "    db2 = db[db['PERIOD'] > 4]\n",
+    "    b = (db2[\"PERIOD\"]-4) * 5 - db2['MINUTES_REMAINING'] + 48\n",
+    "    db2 = db2.drop(['GAME_MINUTES_PLAYED'], 1)\n",
+    "    db2.insert(7,\"GAME_MINUTES_PLAYED\", b)\n",
+    "    dball = db1.append(db2)\n",
+    "    dball = dball[dball['PLAYER_NAME'] == playername]\n",
+    "    if time != 100:\n",
+    "        dball = dball[dball['GAME_MINUTES_PLAYED'] == time]\n",
+    "    return dball.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()\n",
+    "\n",
+    "def hitratebytime_team(teamname, time = 100):\n",
+    "    a=(db[\"PERIOD\"]*12)-db[\"MINUTES_REMAINING\"]\n",
+    "    db.insert(7,\"GAME_MINUTES_PLAYED\", a)\n",
+    "    db1 = db[db['PERIOD'] <= 4]\n",
+    "    db2 = db[db['PERIOD'] > 4]\n",
+    "    b = (db2[\"PERIOD\"]-4) * 5 - db2['MINUTES_REMAINING'] + 48\n",
+    "    db2 = db2.drop(['GAME_MINUTES_PLAYED'], 1)\n",
+    "    db2.insert(7,\"GAME_MINUTES_PLAYED\", b)\n",
+    "    dball = db1.append(db2)\n",
+    "    dball = dball[dball['TEAM_NAME'] == teamname]\n",
+    "    if time != 100:\n",
+    "        dball = dball[dball['GAME_MINUTES_PLAYED'] == time]\n",
+    "    return dball.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()\n"
    ]
   }
  ],
