Co-authored-by: FlorianKenner <FlorianKenner@users.noreply.github.com> Co-authored-by: lokrau <lokrau@users.noreply.github.com> lol

--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11067/1091249216.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/tmp/ipykernel_14187/1091249216.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  db = db.drop([\"GRID_TYPE\", \"GAME_EVENT_ID\", \"TEAM_ID\", \"SHOT_ATTEMPTED_FLAG\"],1)\n"
      ]
     },
@@ -449,7 +449,7 @@
        "4  BOS  PHI  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,18 +474,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PLAYER_NAME\n",
-       "Jayson Tatum    0.449807\n",
+       "PLAYER_NAME   ACTION_TYPE                         SHOT_TYPE     \n",
+       "Jayson Tatum  Alley Oop Dunk Shot                 2PT Field Goal    0.750000\n",
+       "              Cutting Dunk Shot                   2PT Field Goal    0.900000\n",
+       "              Cutting Finger Roll Layup Shot      2PT Field Goal    0.600000\n",
+       "              Cutting Layup Shot                  2PT Field Goal    0.714286\n",
+       "              Driving Dunk Shot                   2PT Field Goal    0.947368\n",
+       "              Driving Finger Roll Layup Shot      2PT Field Goal    0.586957\n",
+       "              Driving Floating Bank Jump Shot     2PT Field Goal    0.666667\n",
+       "              Driving Floating Jump Shot          2PT Field Goal    0.351351\n",
+       "              Driving Hook Shot                   2PT Field Goal    0.333333\n",
+       "              Driving Layup Shot                  2PT Field Goal    0.369048\n",
+       "              Driving Reverse Layup Shot          2PT Field Goal    0.500000\n",
+       "              Dunk Shot                           2PT Field Goal    0.833333\n",
+       "              Fadeaway Jump Shot                  2PT Field Goal    0.215686\n",
+       "              Finger Roll Layup Shot              2PT Field Goal    0.000000\n",
+       "              Floating Jump shot                  2PT Field Goal    0.636364\n",
+       "              Hook Bank Shot                      2PT Field Goal    1.000000\n",
+       "              Jump Bank Shot                      2PT Field Goal    1.000000\n",
+       "                                                  3PT Field Goal    0.500000\n",
+       "              Jump Shot                           2PT Field Goal    0.216216\n",
+       "                                                  3PT Field Goal    0.389121\n",
+       "              Layup Shot                          2PT Field Goal    0.357143\n",
+       "              Pullup Jump shot                    2PT Field Goal    0.358491\n",
+       "                                                  3PT Field Goal    0.363636\n",
+       "              Putback Dunk Shot                   2PT Field Goal    0.666667\n",
+       "              Putback Layup Shot                  2PT Field Goal    1.000000\n",
+       "              Reverse Layup Shot                  2PT Field Goal    0.500000\n",
+       "              Running Alley Oop Dunk Shot         2PT Field Goal    1.000000\n",
+       "              Running Dunk Shot                   2PT Field Goal    1.000000\n",
+       "              Running Finger Roll Layup Shot      2PT Field Goal    0.722222\n",
+       "              Running Jump Shot                   2PT Field Goal    0.000000\n",
+       "              Running Layup Shot                  2PT Field Goal    0.666667\n",
+       "              Running Reverse Layup Shot          2PT Field Goal    1.000000\n",
+       "              Step Back Bank Jump Shot            2PT Field Goal    0.000000\n",
+       "              Step Back Jump shot                 2PT Field Goal    0.447368\n",
+       "                                                  3PT Field Goal    0.270270\n",
+       "              Tip Dunk Shot                       2PT Field Goal    1.000000\n",
+       "              Tip Layup Shot                      2PT Field Goal    0.400000\n",
+       "              Turnaround Fadeaway Bank Jump Shot  2PT Field Goal    0.666667\n",
+       "              Turnaround Fadeaway shot            2PT Field Goal    0.472222\n",
+       "              Turnaround Hook Shot                2PT Field Goal    0.000000\n",
+       "              Turnaround Jump Shot                2PT Field Goal    0.562500\n",
        "Name: SHOT_MADE_FLAG, dtype: float64"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,26 +540,24 @@
     "    b = a[db['SHOT_TYPE'] == shottype]\n",
     "    return b.groupby('PLAYER_NAME').SHOT_MADE_FLAG.mean()\n",
     "\n",
-    "def hitrateShottype_Action(playername, actiontype, shottype):\n",
+    "def hitrateShottype_Action(playername):\n",
     "    a = db[db['PLAYER_NAME'] == playername]\n",
-    "    b = a[db['ACTION_TYPE'] == actiontype]\n",
-    "    c = b[db['SHOT_TYPE'] == shottype]\n",
-    "    return c.groupby('PLAYER_NAME', 'ACTION_TYPE', 'SHOT_TYPE').SHOT_MADE_FLAG.mean()\n",
+    "    return a.groupby(['PLAYER_NAME', 'ACTION_TYPE','SHOT_TYPE']).SHOT_MADE_FLAG.mean()\n",
     "\n",
-    "hitrateShottype_Action (\"Jayson Tatum\", \"Jump Shot\", \"Jump Shot\")\n",
+    "hitrateShottype_Action (\"Jayson Tatum\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11067/4120920332.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_14187/4120920332.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  b = a[db['SHOT_TYPE'] == shottype]\n"
      ]
     },
@@ -531,7 +569,7 @@
        "Name: SHOT_MADE_FLAG, dtype: float64"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,10 +636,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GAME_ID   HTM  VTM\n",
+       "21800001  BOS  PHI    0.432990\n",
+       "21800019  TOR  BOS    0.404040\n",
+       "21800028  NYK  BOS    0.402439\n",
+       "21800040  BOS  ORL    0.406593\n",
+       "21800065  OKC  BOS    0.383721\n",
+       "                        ...   \n",
+       "21801153  BOS  MIA    0.395604\n",
+       "21801170  MIA  BOS    0.475000\n",
+       "21801183  IND  BOS    0.521739\n",
+       "21801203  BOS  ORL    0.471910\n",
+       "21801211  WAS  BOS    0.454545\n",
+       "Name: SHOT_MADE_FLAG, Length: 82, dtype: float64"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def hitratebygame_team(teamname):\n",
+    "    a = db[db[\"TEAM_NAME\"] == teamname]\n",
+    "    return a.groupby(['GAME_ID','HTM', 'VTM']).SHOT_MADE_FLAG.mean()\n",
+    "\n",
+    "hitratebygame_team(\"Boston Celtics\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def hitratebygameHome():\n",
+    "    return db.groupby(['GAME_ID','HTM']).SHOT_MADE_FLAG.mean()\n",
+    "\n",
+    "def hitratebygameAway():\n",
+    "    return db.groupby(['GAME_ID','VTM']).SHOT_MADE_FLAG.mean()"
+   ]
   }
  ],
  "metadata": {
