--- a/visualisierung.ipynb
+++ b/visualisierung.ipynb
@@ -2,31 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
     "import seaborn as sns"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "47f44ec9e46f4347665746d19a2aeaa70ae822e129a0db0c2a468e3ce721aeb6"
+   "hash": "74d953ccb77614a2fdb36ace2dbb057050da051ce89e5b9e3e44cffd989d2e91"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('ds101': conda)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit ('ds101': conda)"
   },
   "language_info": {
    "codemirror_mode": {
