Co-authored-by: FlorianKenner <FlorianKenner@users.noreply.github.com> Co-authored-by: lokrau <lokrau@users.noreply.github.com>hh

--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "4  BOS  PHI  "
       ]
      },
-     "execution_count": 261,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "Name: SHOT_MADE_FLAG, dtype: float64"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "Name: SHOT_MADE_FLAG, dtype: float64"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "<AxesSubplot:xlabel='GAME_ID,HTM,VTM'>"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -714,9 +714,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 403,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3881144219.py, line 34)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_6943/3881144219.py\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    return dball.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()ree throw top arc\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib.patches import Circle, Rectangle, Arc\n",
     "\n",
@@ -743,7 +752,15 @@
     "    inner_box = Rectangle((-60, -47.5), 120, 190, linewidth=lw, color=color,\n",
     "                          fill=False)\n",
     "\n",
-    "    # Create free throw top arc\n",
+    "    # Create f    a=(db[\"PERIOD\"]*12)-db[\"MINUTES_REMAINING\"]\n",
+    "    db.insert(7,\"GAME_MINUTES_PLAYED\", a)\n",
+    "    db1 = db[db['PERIOD'] <= 4]\n",
+    "    db2 = db[db['PERIOD'] > 4]\n",
+    "    b = (db2[\"PERIOD\"]-4) * 5 - db2['MINUTES_REMAINING'] + 48\n",
+    "    db2 = db2.drop(['GAME_MINUTES_PLAYED'], 1)\n",
+    "    db2.insert(7,\"GAME_MINUTES_PLAYED\", b)\n",
+    "    dball = db1.append(db2)\n",
+    "    return dball.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()ree throw top arc\n",
     "    top_free_throw = Arc((0, 142.5), 120, 120, theta1=0, theta2=180,\n",
     "                         linewidth=lw, color=color, fill=False)\n",
     "    # Create free throw bottom arc\n",
@@ -791,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +906,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.sort_values of PLAYER_NAME\n",
+       "Aaron Gordon       470\n",
+       "Aaron Holiday      105\n",
+       "Abdel Nader         91\n",
+       "Al Horford         387\n",
+       "Al-Farouq Aminu    257\n",
+       "                  ... \n",
+       "Zach LaVine        530\n",
+       "Zach Lofton          0\n",
+       "Zaza Pachulia       85\n",
+       "Zhaire Smith        14\n",
+       "Zhou Qi              1\n",
+       "Name: SHOT_MADE_FLAG, Length: 526, dtype: int64>"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rauskristallisieren der stars durch anzahl der hits "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#erstellen eines graphen der stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +956,7 @@
        "<AxesSubplot:xlabel='GAME_MINUTES_PLAYED'>"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -918,13 +976,6 @@
    "source": [
     "hitratebytime().plot(figsize=(30,10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
