--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -976,6 +976,21 @@
    "source": [
     "hitratebytime().plot(figsize=(30,10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stars():\n",
+    "    db = pd.read_csv(\"nba_shotchartdetail_2018-19.csv\")\n",
+    "    db = db.groupby('PLAYER_NAME').SHOT_MADE_FLAG.sum()\n",
+    "    db = db.sort_values(ascending = False)\n",
+    "    return db.head()\n",
+    "\n",
+    "stars()\n"
+   ]
   }
  ],
  "metadata": {
