--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -935,6 +935,38 @@
    "source": [
     "hitratebytime().plot(figsize=(30,10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stars():\n",
+    "    db = pd.read_csv(\"nba_shotchartdetail_2018-19.csv\")\n",
+    "    db = db.groupby('PLAYER_NAME').SHOT_MADE_FLAG.sum()\n",
+    "    db = db.sort_values(ascending = False)\n",
+    "    return db[:20]\n",
+    "\n",
+    "def starsmean():\n",
+    "    db = pd.read_csv(\"nba_shotchartdetail_2018-19.csv\")\n",
+    "    array = [\"James Harden\",\"Bradley Beal\", \"Kemba Walker\",\"Giannis Antetokounmpo\",\"Kevin Durant\",\"Paul George\", \"Nikola Vucevic\", \"LaMarcus Aldridge\", \"Karl-Anthony Towns\", \"Damian Lillard\",\"Donovan Mitchell\",\"D'Angelo Russell\", \"Klay Thompson\", \"Stephen Curry\", \"DeMar DeRozan\", \"Russell Westbrook\", \"Buddy Hield\", \"Blake Griffin\", \"Nikola Jokic\", \"Tobias Harris\"]\n",
+    "    dbs = db.loc[db['PLAYER_NAME'].isin(array)]\n",
+    "    a=(db[\"PERIOD\"]*12)-db[\"MINUTES_REMAINING\"]\n",
+    "    dbs.insert(7,\"GAME_MINUTES_PLAYED\", a)\n",
+    "    dbs1 = dbs[dbs['PERIOD'] <= 4]\n",
+    "    dbs2 = dbs[dbs1['PERIOD'] > 4]\n",
+    "    b = (dbs2[\"PERIOD\"]-4) * 5 - dbs2['MINUTES_REMAINING'] + 48\n",
+    "    dbs2 = dbs2.drop(['GAME_MINUTES_PLAYED'], 1)\n",
+    "    dbs2.insert(7,\"GAME_MINUTES_PLAYED\", b)\n",
+    "    dbblll = dbs1.append(dbs2)\n",
+    "    return dbblll.groupby(\"GAME_MINUTES_PLAYED\").SHOT_MADE_FLAG.mean()\n",
+    "\n",
+    "\n",
+    "plt.plot(starsmean())\n",
+    "plt.plot(hitratebytime())\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
