--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -562,29 +562,6 @@
     "    a = db[db['PLAYER_NAME'] == playername]\n",
     "    return a.groupby(['PLAYER_NAME', 'ACTION_TYPE','SHOT_TYPE']).SHOT_MADE_FLAG.mean()\n",
     "\n",
-    "hitrateShottype_Action (\"Jayson Tatum\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TEAM_NAME\n",
-       "Boston Celtics    0.364793\n",
-       "Name: SHOT_MADE_FLAG, dtype: float64"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def hitrateTeam(teamname):\n",
     "    a = db[db['TEAM_NAME'] == teamname]\n",
     "    return a.groupby('TEAM_NAME').SHOT_MADE_FLAG.mean()\n",
@@ -594,7 +571,10 @@
     "    b = a[db['SHOT_TYPE'] == shottype]\n",
     "    return b.groupby('TEAM_NAME').SHOT_MADE_FLAG.mean()\n",
     "\n",
-    "hitrateTeamShottype(\"Boston Celtics\", \"3PT Field Goal\")"
+    "hitrateTeamShottype(\"Boston Celtics\", \"3PT Field Goal\")\n",
+    "\n",
+    "hitrateShottype_Action (\"Jayson Tatum\")\n",
+    "\n"
    ]
   },
   {
