--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -487,7 +487,11 @@
     "    return db[db[\"SHOT_MADE_FLAG\"] == \"1\"]\n",
     "\n",
     "def actiontype(actiontype):\n",
-    "    return db[db[\"ACTION_TYPE\"] == actiontype]"
+    "    return db[db[\"ACTION_TYPE\"] == actiontype]\n",
+    "\n",
+    "def hitrate(playername):\n",
+    "    a = db[db['PLAYER_NAME'] == playername]\n",
+    "    return a.groupby('PLAYER_NAME').SHOT_MADE_FLAG.mean()"
    ]
   },
   {
@@ -549,10 +553,6 @@
     }
    ],
    "source": [
-    "def hitrate(playername):\n",
-    "    a = db[db['PLAYER_NAME'] == playername]\n",
-    "    return a.groupby('PLAYER_NAME').SHOT_MADE_FLAG.mean()\n",
-    "\n",
     "def hitrateShottype(playername, shottype):\n",
     "    a = db[db['PLAYER_NAME'] == playername]\n",
     "    b = a[db['SHOT_TYPE'] == shottype]\n",
