--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -473,6 +473,7 @@
     }
    ],
    "source": [
+    "#Cleanup\n",
     "db = db.drop([\"GRID_TYPE\", \"GAME_EVENT_ID\", \"TEAM_ID\", \"SHOT_ATTEMPTED_FLAG\"],1)\n",
     "db.head()"
    ]
@@ -669,6 +670,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "#Enrichment\n",
     "def hitratebytime():\n",
     "    a=(db[\"PERIOD\"]*12)-db[\"MINUTES_REMAINING\"]\n",
     "    db.insert(7,\"GAME_MINUTES_PLAYED\", a)\n",
